# airflow-astro-project

./: .gitignore  Dockerfile  README.md  config.yml  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: api_to_postgres.py
include/: controller.py  db.py  models.py
