[tool.poetry]
name = "airflow-astro-project"
version = "0.1.0"
description = ""
authors = ["Caio Machado <moliveiracaio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
requests = "^2.32.3"
apache-airflow = "^2.10.3"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
apache-airflow-providers-postgres = "^5.13.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
